# AD_projet

./: Notebook_AD_modeleHR.ipynb  PB-data_etrangers.parquet  README.md  classement_correlations.csv  data_basesfiscalescommunes.parquet  data_diplomes.parquet  data_electeurs.parquet  data_menages.parquet  data_naticommune.parquet  data_popdepartement.parquet  data_publicprive.parquet  data_revenu.parquet  isfcommunes.csv  main.py  notebook d'analyse copy.ipynb  notebook d'analyse.ipynb  proprietairescommunes.csv  pyproject.toml  script_fichier_csv.py
données_ind/: data_agesex.parquet  data_basesfiscalescommunes.parquet  data_capitalimmobiliercommunes.parquet  data_crimesdelits.parquet  data_csp.parquet  data_isfcommunes.parquet  data_population.parquet  data_proprietairescommunes.parquet  data_rsa.parquet
